crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpch_q22_sf10.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q22"
---
+--------------------+---------+-------------+
| custsale.cntrycode | numcust | totacctbal  |
+--------------------+---------+-------------+
| 13                 | 9025    | 67592468.28 |
| 17                 | 9067    | 68084663.34 |
| 18                 | 9210    | 69312783.61 |
| 23                 | 8984    | 67607771.32 |
| 29                 | 9199    | 69015438.26 |
| 30                 | 9343    | 70118838.04 |
| 31                 | 9086    | 68144525.38 |
+--------------------+---------+-------------+
