crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpch_q22_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q22"
---
+-----------+---------+--------------+
| cntrycode | numcust | totacctbal   |
+-----------+---------+--------------+
| 30        | 91358   | 685118386.83 |
| 18        | 91293   | 684593250.42 |
| 29        | 91124   | 683683023.65 |
| 17        | 91314   | 685030261.91 |
| 31        | 90553   | 678671645.35 |
| 13        | 90748   | 679530260.80 |
| 23        | 90359   | 677680422.77 |
+-----------+---------+--------------+
