crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpch_q6_sf10.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q6"
---
+-----------------+
| revenue         |
+-----------------+
| 1230113636.0101 |
+-----------------+
