crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpch_q7_sf10.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q7"
---
+-------------+-------------+--------+----------------+
| supp_nation | cust_nation | l_year | revenue        |
+-------------+-------------+--------+----------------+
| FRANCE      | GERMANY     | 1995   | 521960141.7003 |
| FRANCE      | GERMANY     | 1996   | 524796110.3842 |
| GERMANY     | FRANCE      | 1995   | 542199700.0546 |
| GERMANY     | FRANCE      | 1996   | 533640926.2614 |
+-------------+-------------+--------+----------------+
