crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpch_q7_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q7"
---
+-------------+-------------+--------+-----------------+
| supp_nation | cust_nation | l_year | revenue         |
+-------------+-------------+--------+-----------------+
| FRANCE      | GERMANY     | 1995   | 5296106289.7407 |
| FRANCE      | GERMANY     | 1996   | 5313955237.5650 |
| GERMANY     | FRANCE      | 1995   | 5286060012.2108 |
| GERMANY     | FRANCE      | 1996   | 5324729138.8922 |
+-------------+-------------+--------+-----------------+
