crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-cayenne[file]_tpch_q8_sf10.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q8"
---
+--------+------------+
| o_year | mkt_share  |
+--------+------------+
| 1995   | 0.03882014 |
| 1996   | 0.03948968 |
+--------+------------+
