crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-duckdb[file]-64gib_tpch_q14_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q14"
---
+--------------------+
| promo_revenue      |
+--------------------+
| 16.640357433254103 |
+--------------------+
