crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__s3[parquet]-duckdb[file]-64gib_tpch_q4_sf100.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpch_q4"
---
+-----------------+-------------+
| o_orderpriority | order_count |
+-----------------+-------------+
| 1-URGENT        | 1051801     |
| 2-HIGH          | 1051366     |
| 3-MEDIUM        | 1051587     |
| 4-NOT SPECIFIED | 1050950     |
| 5-LOW           | 1051725     |
+-----------------+-------------+
